--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <div id="inputArea">
     <label for="insertTask" id="taskLabel">Enter a new task here:</label>
     <input id="insertTask" type="text" />
+    <img src="taskImage.jpg" id="headerImage" alt="Task Image" />
     <button id="Submit">Add</button>
   </div>
 
