--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
 
   <!-- Input Area: label, input box, and Add button -->
   <div id="inputArea">
-    <label for="insertTask" id="taskLabel">Enter a new task here:</label>
-    <input id="insertTask" type="text" />
-    <button id="Submit">Add</button>
-    <img src="taskImage.jpg" id="headerImage" alt="Task Image" />
+    <div class="leftSide">
+      <label for="insertTask" id="taskLabel">Enter a new task here:</label>
+      <input id="insertTask" type="text" />
+      <button id="Submit">Add</button>
+    </div>
+    <div class="rightSide">
+      <img src="taskImage.jpg" id="headerImage" alt="Task Image" />
+    </div>
   </div>
+
 
   <!-- Decorative Image, fixed on top right -->
 
